# OddSketch-Genome

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  Dockerfile  LICENSE  README-docker.md  README-ja.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt
experiments/: README-ja.md  README.md
experiments/configs/: pair_task.pipeline_config.json  search_task.config.json
experiments/env/: Dockerfile
experiments/outputs/: .gitignore
experiments/pair_task/: README-ja.md  README.md  config.json  test_flow.md
experiments/refseq_sketch_task/: README-ja.md  README.md  config.json
experiments/scripts/: build_tools.sh  download_data.sh  make_figures.py  run_benchmark.sh
experiments/search_task/: README.md  README_ja.md  config.json  project_runner.py  repeat_runner.py
genome-Odd-Sketch/: README.md
genome-Odd-Sketch/src/: Makefile  MurmurHash3.h  MurmurHash3.h.gch  oddpipe.py  oddsketch  oddsketch.cpp  oddsketch_SNPread.cpp  oddsketch_bottom_k.cpp  oddsketch_fileread.cpp  oddsketch_unique.cpp  out.txt
include/oddsketch/: oddsketch_cli.hpp
scripts/: bootstrap.sh  check_env.sh  make_public_archive.sh
src/: Makefile  README.md  oddsketch  oddsketch.cpp  temp_paths.txt  xxhash.cpp  xxhash.hpp  xxhash_header_only.hpp
src/apps/: oddsketch_main.cpp  true_index_pairs_main.cpp
src/cal/: Makefile  bin_min=-1.txt  bin_min=0.txt  bin_out_true.txt  cal_Jaccard.cpp  jaccard_oddsketch.txt  jaccard_true.txt  (+4 more)
test/: Makefile  test  test.cpp  unzip-seq.py
tools/: extract_jaccard_values.py
(+2625 files in other folders)
