[project]
name = "genome-oddsketch-workflow"
version = "0.1.0"
description = "Synthetic-genome evaluation workflow for OddSketch and BinDash"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
]

[tool.uv]
package = false
